--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-text-typist": "^1.1.7",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
